--- a/companionapp/styles.css
+++ b/companionapp/styles.css
@@ -61,11 +61,11 @@ body {
 }
 
 .sing {
-  background-color: #fcd486;
+  background-color: #85d4eb;
 }
 
 .idle {
-  background-color: #fcd486;
+  background-color: #b3d99e;
 }
 
 /* FONTS */
