--- a/companionapp/styles.css
+++ b/companionapp/styles.css
@@ -31,7 +31,7 @@ body {
 }
 
 .header {
-  background-color: #79cbca;
+  background-color: #85d4eb;
 
   margin: 0px;
   border-radius: 2px 2px 0px 0px;
@@ -57,7 +57,7 @@ body {
 }
 
 .says {
-  background-color: #fcd486;
+  background-color: #79cbca;
 }
 
 .sing {
