--- a/companionapp/styles.css
+++ b/companionapp/styles.css
@@ -53,7 +53,7 @@ body {
 }
 
 .hidenseek {
-  background-color: #818dc5;
+  background-color: #fcd486;
 }
 
 .says {
@@ -61,7 +61,7 @@ body {
 }
 
 .sing {
-  background-color: #85d4eb;
+  background-color: #818dc5;
 }
 
 .idle {
