--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -208,7 +208,7 @@ th { color: #444; }
 
 img { max-width: 100%; }
 
-header { width: 270px; float: left; position: fixed; -webkit-font-smoothing:
+header { width: 270px; float: left; -webkit-font-smoothing:
 subpixel-antialiased; }
 
 strong { color: #222; font-weight: 700; }
@@ -219,7 +219,7 @@ small { font-size: 11px; }
 
 hr { border: 0; background: #e5e5e5; height: 1px; margin: 0 0 20px; }
 
-footer { width: 270px; float: left; position: fixed; bottom: 50px;
+footer { width: 270px; float: left; bottom: 50px;
 -webkit-font-smoothing: subpixel-antialiased; }
 
 
