Spelt words correctly

--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,6 +1,6 @@
 <ul class="nav">
 
-    <li class="nav-header"><a  href="{{ site.baseurl }}/">Overveiw</a></li>
+    <li class="nav-header"><a  href="{{ site.baseurl }}/">Overview</a></li>
     {% for section in site.sections %}
         {% assign attr = section[0] %}
         {% assign label = section[1] %}
