--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -9,5 +9,5 @@
             <li class="nav-link" ><a data-order="{{ page.order }}" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>
         {% endfor %}
     {% endfor %}
-    <li class="nav-header"><a  href="{{ site.github.url }}/">GitHub Project</a></li>
+    <li class="nav-header"><a  href="https://github.com/harryiliffe/open-design-2018">GitHub Project</a></li>
 </ul>
